# DEVGAME_UET

./: CMakeLists.txt  README.md  check.cpp  main.cpp
Data/: DataGame.h  DataVocal.h  dictionary.txt
GameScene/: Background.h  Scence.h
GameSetup/: FuncSettings.h  GameBoard.h  GameSettings.h  Objects.h
Menu/: All.h  Menu.h  PlayButton.h  SettingButton.h  TurtorialButton.h
Objects/: BulletFunction.h  MainFunction.h  MateoriteFuntion.h  Obj.h  SetObj.h  SpaceShipFunction.h
Objects/Bullet/: Bullet.h
Objects/MainObj/: MainObj.h  combatText.h  heart.h  score.h
Objects/Meteorite/: Meteorite.h
Objects/SpaceShip/: SpaceShip.h  SpaceShipType1.h  SpaceShipType2.h  SpaceShipType3.h  SpaceShipType4.h  SpaceShipType5.h  SpaceShipType6.h  SpaceShipType7.h  healthBar.h
Objects/combatText/: combatText.h
SDL2-2.26.0/x86_64-w64-mingw32/include/SDL2/: SDL_main.h
cmake/modules/: FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
